--- a/test/templates/standard.haml
+++ b/test/templates/standard.haml
@@ -21,6 +21,16 @@
       = [1, 2, 3].collect { |n|     |
           n.to_s                    |
         }.join("|")                 |
+    %div.silent
+      - foo = String.new
+      - foo << "this"
+      - foo << " shouldn't"
+      - foo << " evaluate"
+      = foo + " but now it should!"
+      -# Woah crap a comment!
+    %ul.really.cool
+      - ('a'..'f').each do |a|
+        %li= a
     #combo.of_divs_with_underscore= @should_eval = "with this text"
     .footer
       %strong.shout= "This is a really long ruby quote. It should be loved and wrapped because its more than 50 characters. This value may change in the future and this test may look stupid. \nSo, I'm just making it *really* long. God, I hope this works"
