--- a/test/templates/silent_script.haml
+++ b/test/templates/silent_script.haml
@@ -8,7 +8,7 @@
       %li= i
   %h1 I can catch errors!
   - begin
-    - Foo.silly
+    - String.silly
   - rescue NameError => e
     = "Oh no! \"#{e}\" happened!"
   %p
