--- a/test/rhtml/standard.rhtml
+++ b/test/rhtml/standard.rhtml
@@ -6,6 +6,7 @@
   </head>
   <body>
     <!-- You're In my house now! -->
+    <% concat "Foo", Proc.new {} %>
     <div class='header'>
       Yes, ladies and gentileman. He is just that egotistical.
       Fantastic! This should be multi-line output
