--- a/test/haml/templates/just_stuff.haml
+++ b/test/haml/templates/just_stuff.haml
@@ -39,3 +39,13 @@
   Woah a period.
 = "test" |
   "test" |
+- case :foo
+- when :bar
+  %bar/
+- when :foo
+  %foo/
+- case :foo
+  - when :bar
+    %bar/
+  - when :foo
+    %foo/
