--- a/test/sass/results/import.css
+++ b/test/sass/results/import.css
@@ -22,6 +22,6 @@ body { font: Arial; background: blue; }
 #content.user.show #container.top #column.right { width: 600px; }
 #content.user.show #container.bottom { background: brown; }
 
-@import basic.css
-@import ../results/complex.css
+@import url(basic.css);
+@import url(../results/complex.css);
 nonimported { myconst: hello; otherconst: goodbye; }
