Split HTML4 colors and X11 colors.  Only the HTML4 colors will have reverse mapping.  As a result, some unit test assertions had to be updated.

--- a/test/sass/more_results/more1_with_line_comments.css
+++ b/test/sass/more_results/more1_with_line_comments.css
@@ -23,4 +23,4 @@ body {
   width: 600px; }
 /* line 22, ../more_templates/more1.sass */
 #content.user.show #container.bottom {
-  background: brown; }
+  background: #a52a2a; }
