--- a/test/sass/results/line_numbers.css
+++ b/test/sass/results/line_numbers.css
@@ -35,7 +35,7 @@ body {
   width: 600px; }
 /* line 22, ../templates/basic.sass */
 #content.user.show #container.bottom {
-  background: brown; }
+  background: #a52a2a; }
 
 /* line 13, ../templates/importee.sass */
 midrule {
