--- a/test/sass/results/multiline.css
+++ b/test/sass/results/multiline.css
@@ -8,7 +8,7 @@
     #main div em span,
     #header div a span,
     #header div em span {
-      color: pink; }
+      color: #ffc0cb; }
 
 #one div.nested,
 #one span.nested,
