--- a/test/sass/results/basic.css
+++ b/test/sass/results/basic.css
@@ -6,4 +6,4 @@ body { font: Arial; background: blue; }
 
 #content.user.show #container.top #column.left { width: 100px; }
 #content.user.show #container.top #column.right { width: 600px; }
-#content.user.show #container.bottom { background: brown; }
+#content.user.show #container.bottom { background: #a52a2a; }
