Fixed minor comment parsing bug, added test cases.

--- a/test/haml/templates/helpers.haml
+++ b/test/haml/templates/helpers.haml
@@ -19,6 +19,9 @@
         %h1 Big!
         %p Small
         / Invisible
+        / Invisible --- invisible
+        /--------------------- invisible -----
+        /<!--
     = capture do
       .dilly
         %p foo
