--- a/test/erb/_av_partial_1.erb
+++ b/test/erb/_av_partial_1.erb
@@ -6,7 +6,7 @@
       <li>
         <strong>Partial:</strong>
         <% @nesting = 5 %>
-        <%= render :partial => 'haml/erb/av_partial_2' %>
+        <%= render :partial => 'erb/av_partial_2' %>
     <% end %>
   </ul>
 </div>
