--- a/test/templates/action_view.haml
+++ b/test/templates/action_view.haml
@@ -8,7 +8,7 @@
       This is very much like the standard template,
       except that it has some ActionView-specific stuff.
       It's only used for benchmarking.
-    .crazy_partials= render :partial => 'haml/templates/av_partial_1'
+    .crazy_partials= render :partial => 'templates/av_partial_1'
     / You're In my house now!
     .header
       Yes, ladies and gentileman. He is just that egotistical.
