Fix handling of 'unless' or 'case' nested in if/else
The parser checks for incorrect 'else' nesting by tracking
if/case/unless blocks in an internal stack. It was pushing to but
never popping from this stack for 'unless' and 'case' blocks, leading
to spurious syntax errors.

Regression examples included.

--- a/test/templates/silent_script.haml
+++ b/test/templates/silent_script.haml
@@ -23,6 +23,11 @@
         Odd!
       - else
         Even!
+    - unless true
+      Testing else indent
+    - case 1
+    - when 2
+      Also testing else indent
   - else
     = "This can't happen!"
 - 13 |
